Fixed background images disappearing on iOS.

--- a/app/client/src/pages/caption-image/caption-image.scss
+++ b/app/client/src/pages/caption-image/caption-image.scss
@@ -9,11 +9,11 @@
 }
 
 .background {
-  width: 100%;
-  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   z-index: -1;
   background-size: cover;
   background-repeat: no-repeat;
