--- a/app/client/src/pages/languages/view/view-language.scss
+++ b/app/client/src/pages/languages/view/view-language.scss
@@ -18,7 +18,9 @@
     left: 20px;
     top: 40px;
     z-index: 1;
-    padding: 5px;
+    padding: 15px;
+    width: 44px;
+    height: 44px;
   }
 
   img {
